UCF-APR2.4/ftr main/force-app/main/default/objects/Infinium_Order_Event__c/Infinium_Order_Event__c.object-meta.xml
<CustomObject>
    <label>Infinium Order Event</label>
    <nameField>
        <label>Infinium Order Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Infinium Order Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>