UCF-APR2.4/ftr main/force-app/main/default/objects/Infinium_Order_Event__c/fields/externalId__c.field-meta.xml
<CustomField>
    <fullName>externalId__c</fullName>
    <label>externalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>