UCF-APR2.4/ftr main/force-app/main/default/objects/Infinium_Order_Event__c/fields/OLI__c.field-meta.xml
<CustomField>
    <fullName>OLI__c</fullName>
    <label>OLI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>