UCF-APR2.4/ftr main/force-app/main/default/objects/Infinium_Order_Event__c/fields/purchaseOrderLine__c.field-meta.xml
<CustomField>
    <fullName>purchaseOrderLine__c</fullName>
    <label>purchaseOrderLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>