UCF-APR2.4/ftr main/force-app/main/default/objects/Infinium_Order_Event__c/fields/purchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>purchaseOrderNumber__c</fullName>
    <label>purchaseOrderNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>