UCF-APR2.4/ftr main/force-app/main/default/objects/Infinium_Order_Event__c/fields/referenceId__c.field-meta.xml
<CustomField>
    <fullName>referenceId__c</fullName>
    <label>referenceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>