UCF-APR2.4/ftr main/force-app/main/default/objects/Infinium_Order_Event__c/fields/requisitionNumber__c.field-meta.xml
<CustomField>
    <fullName>requisitionNumber__c</fullName>
    <label>requisitionNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>